<resources>
    <string name="app_name">KeepMoney</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="uscite">Uscite</string>
    <string name="entrate">Entrate</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="nuove_entrate">Nuove entrate</string>
    <string name="_0">0</string>
    <string name="registrati">REGISTRATI</string>
    <string name="email">Email</string>
    <string name="registrazione">REGISTRAZIONE</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="gestisci_entrate_e_spese">Gestisci entrate e spese</string>
    <string name="tipo">Tipo</string>
    <string name="data">Data</string>
    <string name="elettronica">Elettronica</string>
    <string name="budget">Budget</string>
    <string name="spese_recenti">Spese Recenti</string>
    <string name="wishlist">WishList</string>
    <string name="title_movimenti">Movimenti</string>
    <string name="keepmoney">KeepMoney</string>
    <string name="oggetto">Oggetto</string>
    <string name="prezzo">Prezzo</string>
    <string name="ora">Ora</string>
    <string name="quantit">Quantità</string>
    <string name="avanti">Avanti</string>
    <string name="nome_lista">Nome lista</string>
    <string name="conferma">Conferma</string>
    <string name="descrizione">Descrizione</string>

    <!--Categories names!-->
    <string name="tech">Tecnologia</string>
    <string name="food">Cibo</string>
    <string name="family">Famiglia</string>
    <string name="fun">Divertimento</string>
    <string name="home">Casa</string>
    <string name="holiday">Vacanza</string>
    <string name="salary">Stipendio</string>
    <string name="present">Regalo</string>
    <string name="bet">Scommessa</string>
    <string name="health">Salute</string>
    <string name="leggi_scontrino">Leggi scontrino</string>

    <!-- Movements sorting button name!-->
    <string name="ascSort">Ordinamento per: prezzo crescente</string>
    <string name="descSort">Ordinamento per: prezzo decrescente</string>
    <string name="predefined">Ordinamento per: predefinito</string>

</resources>