<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtItem"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_baseline_shopping_basket_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/oggetto"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_baseline_euro_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/prezzo"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_baseline_date_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/data"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <EditText
        android:id="@+id/txtTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_baseline_timer_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/ora"
        android:inputType="time"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <Button
        android:id="@+id/btnAddPurch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/aggiungi"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtType"
        app:layout_constraintVertical_bias="0.972" />

    <EditText
        android:id="@+id/txtType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_baseline_category_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tipo"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddPurch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/quantit"
        android:textAlignment="textStart"
        android:inputType="number"
        android:drawableStart="@drawable/ic_baseline_exposure_plus_1_24"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem" />

</androidx.constraintlayout.widget.ConstraintLayout>